--- a/index.html
+++ b/index.html
@@ -1,13 +1,86 @@
 <!DOCTYPE html>
 <html lang="da">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hjem</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/CSS/style.css">
 </head>
+
 <body>
-    
+
+    <nav class="navigation">
+
+        <ul>
+            <a href="">
+                <li>Hjem</li>
+            </a>
+
+            <a href="">
+                <li>Book Tid</li>
+            </a>
+
+            <a href="">
+                <li>Menu</li>
+            </a>
+
+            <a href="">
+                <li>Mød Kattene</li>
+            </a>
+
+            <a href="">
+                <li>Kontakt</li>
+            </a>
+
+        </ul>
+
+    </nav>
+
+    <footer class="footer">
+
+        <section class="socials">
+
+            <h3>Følg os på vores sociale medier!</h3>
+
+            <a href="#"><img src="/assets/img/facebook.png" alt="Facebook link"></a>
+            <a href="#"><img src="/assets/img/instagram.png" alt="Instagram link"></a>
+
+        </section>
+
+        <section class="contact">
+
+            <h3>Café Kit</h3>
+            
+            <img src="/assets/img/location.png" alt="">
+            <p>Fantasivej 45, 1060 København, Danmark</p>
+
+            <img src="assets/img/email.png" alt="">
+            <p>cafekit@gmail.dk</p>
+
+            <img src="/assets/img/phone.png" alt="">
+            <p>+45 12 34 56 78</p>
+
+        </section>
+
+        <section class="closing-time">
+
+            <h3>Åbningstider:</h3>
+
+            <ul>
+                <li>Man: 10-17</li>
+                <li>Tirs: 10-17</li>
+                <li>Ons: 10-17</li>
+                <li>Tor: 10-17</li>
+                <li>Fre: 10-17</li>
+                <li>Lør-Søn: lukket</li>
+            </ul>
+
+        </section>
+
+    </footer>
+
 </body>
+
 </html>
