--- a/book.html
+++ b/book.html
@@ -4,10 +4,116 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hjem</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Booking</title>
+    <link rel="stylesheet" href="assets/CSS/style.css">
 </head>
 <body>
+
+    <nav class="navigation">
+
+        <ul>
+            <a href="index.html">
+                <li>Hjem</li>
+            </a>
+
+            <a href="book.html">
+                <li>Book Tid</li>
+            </a>
+
+            <a href="menu.html">
+                <li>Menu</li>
+            </a>
+
+            <a href="meet-the-cats.html">
+                <li>Mød Kattene</li>
+            </a>
+
+            <a href="contact.html">
+                <li>Kontakt</li>
+            </a>
+
+        </ul>
+
+    </nav>
+
+    <section class="rules">
+
+        <h3>Regler</h3>
+
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum veritatis pariatur neque possimus recusandae vel provident blanditiis explicabo eius, unde quia facilis quos tempore repudiandae culpa sequi officiis at quod! Quidem blanditiis ea illum omnis culpa tempore fugiat eaque molestiae rerum nostrum facilis aliquid possimus aperiam iure iusto, amet maiores laboriosam voluptatibus? Iste sunt, quia odit corporis eos dolore eaque at nesciunt voluptatem dicta quos cum. In delectus nostrum totam porro autem, molestiae provident eos fugit illum quasi eius exercitationem adipisci dolorum dolore amet iusto? Dolores enim officia consequuntur cumque magnam quam, mollitia deserunt. Porro, quasi deserunt. Ut, fugit asperiores!</p>
+
+    </section>
+
+    <section class="booking-formular">
+
+        <label for="name">Fulde navn: </label>
+        <input type="text" name="name" placeholder="Marie Hansen">
+
+        <label for="number">Hvor mange vil i blive? </label>
+        <input type="number" name="number">
+
+        <label for="hours">Hvornår vil du gerne booke til og hvor mange timer? </label>
+        <input type="time" name="hours" id="">
+        <input type="number" name="hours" id="">
+
+        <label for="">Din E-Mail: </label>
+        <input type="email" name="email" placeholder="exempel@hotmail.dk">
+
+        <label for="phone">Dit Telefon nummer: </label>
+        <input type="tel" name="phone">
+
+        <button class="book-btn">Book Tid</button>
+
+        <h3>Priser</h3>
+
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam labore modi blanditiis dolor repellat molestias, non facilis doloremque molestiae magnam repellendus neque architecto atque, illo saepe. Autem reprehenderit nihil odio aliquam ducimus modi iusto? Eaque, magni quidem nihil saepe suscipit accusamus odit. Quaerat quam libero enim quod, non optio blanditiis voluptate dignissimos cum, expedita numquam culpa facilis inventore fugiat nostrum?</p>
+
+    </section>
+
+
+
+    <footer class="footer">
+
+        <section class="socials">
+
+            <h3>Følg os på vores sociale medier!</h3>
+
+            <a href="#"><img src="/assets/img/facebook.png" alt="Facebook link"></a>
+            <a href="#"><img src="/assets/img/instagram.png" alt="Instagram link"></a>
+
+        </section>
+
+        <section class="contact">
+
+            <h3>Café Kit</h3>
+            
+            <img src="/assets/img/location.png" alt="">
+            <p>Fantasivej 45, 1060 København, Danmark</p>
+
+            <img src="assets/img/email.png" alt="">
+            <p>cafekit@gmail.dk</p>
+
+            <img src="/assets/img/phone.png" alt="">
+            <p>+45 12 34 56 78</p>
+
+        </section>
+
+        <section class="closing-time">
+
+            <h3>Åbningstider:</h3>
+
+            <ul>
+                <li>Man: 10-17</li>
+                <li>Tirs: 10-17</li>
+                <li>Ons: 10-17</li>
+                <li>Tor: 10-17</li>
+                <li>Fre: 10-17</li>
+                <li>Lør-Søn: lukket</li>
+            </ul>
+
+        </section>
+
+    </footer>
     
 </body>
 </html>
