--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,118 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hjem</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Kontakt</title>
+    <link rel="stylesheet" href="assets/CSS/style.css">
 </head>
 <body>
     
+    <nav class="navigation">
+
+        <ul>
+            <a href="index.html">
+                <li>Hjem</li>
+            </a>
+
+            <a href="book.html">
+                <li>Book Tid</li>
+            </a>
+
+            <a href="menu.html">
+                <li>Menu</li>
+            </a>
+
+            <a href="meet-the-cats.html">
+                <li>Mød Kattene</li>
+            </a>
+
+            <a href="contact.html">
+                <li>Kontakt</li>
+            </a>
+
+        </ul>
+
+    </nav>
+
+    <figure class="contact-hero">
+
+        <img src="/assets/img/goodbye.jpg" alt="">
+
+    </figure>
+
+    <section class="contact-form">
+
+        <label for="name">Fulde navn: </label>
+        <input type="text" name="name" id="">
+
+        <label for="email">Din Email</label>
+        <input type="email" name="email" id="">
+
+        <textarea name="" cols="30" rows="10"></textarea>
+
+        <button type="submit">Send</button>
+
+        <article class="other-info">
+
+            <dl>
+
+                <dt>Adresse: </dt>
+                <dd>Fantasivej 45, 1060 København, Danmark</dd>
+
+                <dt>Telefon: </dt>
+                <dd>+45 12 34 56 78</dd>
+
+            </dl>
+
+        </article>
+
+        <h2 class="goodbye-text">Vi glæder os til at se jer</h2>
+
+    </section>
+
+
+
+    <footer class="footer">
+
+        <section class="socials">
+
+            <h3>Følg os på vores sociale medier!</h3>
+
+            <a href="#"><img src="/assets/img/facebook.png" alt="Facebook link"></a>
+            <a href="#"><img src="/assets/img/instagram.png" alt="Instagram link"></a>
+
+        </section>
+
+        <section class="contact">
+
+            <h3>Café Kit</h3>
+            
+            <img src="/assets/img/location.png" alt="">
+            <p>Fantasivej 45, 1060 København, Danmark</p>
+
+            <img src="assets/img/email.png" alt="">
+            <p>cafekit@gmail.dk</p>
+
+            <img src="/assets/img/phone.png" alt="">
+            <p>+45 12 34 56 78</p>
+
+        </section>
+
+        <section class="closing-time">
+
+            <h3>Åbningstider:</h3>
+
+            <ul>
+                <li>Man: 10-17</li>
+                <li>Tirs: 10-17</li>
+                <li>Ons: 10-17</li>
+                <li>Tor: 10-17</li>
+                <li>Fre: 10-17</li>
+                <li>Lør-Søn: lukket</li>
+            </ul>
+
+        </section>
+
+    </footer>
+
 </body>
 </html>
