--- a/menu.html
+++ b/menu.html
@@ -4,10 +4,115 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hjem</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Menu</title>
+    <link rel="stylesheet" href="assets/CSS/style.css">
 </head>
 <body>
     
+    <nav class="navigation">
+
+        <ul>
+            <a href="index.html">
+                <li>Hjem</li>
+            </a>
+
+            <a href="book.html">
+                <li>Book Tid</li>
+            </a>
+
+            <a href="menu.html">
+                <li>Menu</li>
+            </a>
+
+            <a href="meet-the-cats.html">
+                <li>Mød Kattene</li>
+            </a>
+
+            <a href="contact.html">
+                <li>Kontakt</li>
+            </a>
+
+        </ul>
+
+    </nav>
+
+    <section class="menu-hero">
+
+        <h1>Vores Menu</h1>
+
+        <img src="/assets/img/menu-hero.jpg" alt="">
+
+    </section>
+
+    <snap-tabs>
+        <header class="scroll-snap-x"> 
+          <nav>
+            <a active href="#responsive">Mad</a>
+            <a href="#accessible">Snacks</a>
+            <a href="#overscroll">Varme Drikke</a>
+            <a href="#more">Kolde Drikke</a>
+          </nav>
+          <span class="snap-indicator"></span>
+        </header>
+        <section class="scroll-snap-x">
+          <article id="responsive">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci cumque, aut ullam nesciunt quam dicta veritatis voluptatum, distinctio nulla, culpa quaerat! Asperiores ut sunt alias officia ducimus ratione voluptates, temporibus consequuntur voluptatum quisquam officiis, magni consectetur vel reiciendis optio porro!</p>
+          </article>
+          <article id="accessible">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus corrupti, eligendi dolores sequi recusandae tempora tempore cupiditate blanditiis, accusamus quas excepturi ullam, mollitia ipsum deserunt. Officiis, laboriosam, nulla modi, non id earum quod laudantium officia odit provident aperiam temporibus est.</p>
+          </article>
+          <article id="overscroll">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error repellendus quaerat veritatis saepe provident ea sit corrupti harum earum perspiciatis consectetur, fugiat reiciendis recusandae perferendis veniam quisquam assumenda, molestiae minus tempore. Vero, maiores sit nihil ducimus eaque debitis iure magnam!</p>
+          </article>
+          <article id="more">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis ex voluptatem ipsam labore? Odit, incidunt? Accusamus, at officia nemo aspernatur vitae ea assumenda id praesentium, neque sit dolorum. Tempore, voluptatum. Neque odit, amet quia sit officia quaerat id hic natus.</p>
+          </article>
+        </section>
+      </snap-tabs>
+
+    <footer class="footer">
+
+        <section class="socials">
+
+            <h3>Følg os på vores sociale medier!</h3>
+
+            <a href="#"><img src="/assets/img/facebook.png" alt="Facebook link"></a>
+            <a href="#"><img src="/assets/img/instagram.png" alt="Instagram link"></a>
+
+        </section>
+
+        <section class="contact">
+
+            <h3>Café Kit</h3>
+            
+            <img src="/assets/img/location.png" alt="">
+            <p>Fantasivej 45, 1060 København, Danmark</p>
+
+            <img src="assets/img/email.png" alt="">
+            <p>cafekit@gmail.dk</p>
+
+            <img src="/assets/img/phone.png" alt="">
+            <p>+45 12 34 56 78</p>
+
+        </section>
+
+        <section class="closing-time">
+
+            <h3>Åbningstider:</h3>
+
+            <ul>
+                <li>Man: 10-17</li>
+                <li>Tirs: 10-17</li>
+                <li>Ons: 10-17</li>
+                <li>Tor: 10-17</li>
+                <li>Fre: 10-17</li>
+                <li>Lør-Søn: lukket</li>
+            </ul>
+
+        </section>
+
+    </footer>
+
+
 </body>
 </html>
