--- a/menu.html
+++ b/menu.html
@@ -44,31 +44,36 @@
 
     </section>
 
-    <snap-tabs>
-        <header class="scroll-snap-x"> 
-          <nav>
-            <a active href="#responsive">Mad</a>
-            <a href="#accessible">Snacks</a>
-            <a href="#overscroll">Varme Drikke</a>
-            <a href="#more">Kolde Drikke</a>
-          </nav>
-          <span class="snap-indicator"></span>
-        </header>
-        <section class="scroll-snap-x">
-          <article id="responsive">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci cumque, aut ullam nesciunt quam dicta veritatis voluptatum, distinctio nulla, culpa quaerat! Asperiores ut sunt alias officia ducimus ratione voluptates, temporibus consequuntur voluptatum quisquam officiis, magni consectetur vel reiciendis optio porro!</p>
-          </article>
-          <article id="accessible">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus corrupti, eligendi dolores sequi recusandae tempora tempore cupiditate blanditiis, accusamus quas excepturi ullam, mollitia ipsum deserunt. Officiis, laboriosam, nulla modi, non id earum quod laudantium officia odit provident aperiam temporibus est.</p>
-          </article>
-          <article id="overscroll">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error repellendus quaerat veritatis saepe provident ea sit corrupti harum earum perspiciatis consectetur, fugiat reiciendis recusandae perferendis veniam quisquam assumenda, molestiae minus tempore. Vero, maiores sit nihil ducimus eaque debitis iure magnam!</p>
-          </article>
-          <article id="more">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis ex voluptatem ipsam labore? Odit, incidunt? Accusamus, at officia nemo aspernatur vitae ea assumenda id praesentium, neque sit dolorum. Tempore, voluptatum. Neque odit, amet quia sit officia quaerat id hic natus.</p>
-          </article>
+    <div class="tabset">
+      <!-- Tab 1 -->
+      <input type="radio" name="tabset" id="tab1" aria-controls="marzen" checked>
+      <label for="tab1">Mad</label>
+      <!-- Tab 2 -->
+      <input type="radio" name="tabset" id="tab2" aria-controls="rauchbier">
+      <label for="tab2">Snacks</label>
+      <!-- Tab 3 -->
+      <input type="radio" name="tabset" id="tab3" aria-controls="dunkles">
+      <label for="tab3">Drikkevarer</label>
+      
+      <div class="tab-panels">
+
+        <section id="marzen" class="tab-panel">
+          <h2>Mad</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, dolorum, expedita ad corrupti cumque doloremque deserunt voluptatem architecto accusamus dignissimos, cupiditate cum quod aliquam. A assumenda ab explicabo iste minus?</p>
+      </section>
+
+        <section id="rauchbier" class="tab-panel">
+          <h2>Snacks</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere laboriosam accusantium nostrum distinctio nulla illum debitis dignissimos sapiente, expedita pariatur quae maxime fuga. Consequatur neque, accusantium architecto rerum voluptas iure?</p>
         </section>
-      </snap-tabs>
+
+        <section id="dunkles" class="tab-panel">
+          <h2>Drikkevarer</h2>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus accusantium facilis vero dicta ab ducimus repudiandae unde quaerat tempora illo nam commodi maxime ea ullam id, doloribus ipsa amet non?</p>
+        </section>
+      </div>
+      
+    </div>
 
     <footer class="footer">
 
