--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <nav class="navigation index-nav">
+    <nav class="navigation" id="index-nav">
 
         <ul>
             <a href="index.html">
