Moved button to base + CSS for the booking page

--- a/book.html
+++ b/book.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="da">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Booking</title>
     <link rel="stylesheet" href="assets/CSS/style.css">
 </head>
+
 <body>
 
     <nav class="navigation">
@@ -38,36 +40,68 @@
 
     <section class="rules">
 
-        <h3>Regler</h3>
+        <h1>Regler</h1>
 
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum veritatis pariatur neque possimus recusandae vel provident blanditiis explicabo eius, unde quia facilis quos tempore repudiandae culpa sequi officiis at quod! Quidem blanditiis ea illum omnis culpa tempore fugiat eaque molestiae rerum nostrum facilis aliquid possimus aperiam iure iusto, amet maiores laboriosam voluptatibus? Iste sunt, quia odit corporis eos dolore eaque at nesciunt voluptatem dicta quos cum. In delectus nostrum totam porro autem, molestiae provident eos fugit illum quasi eius exercitationem adipisci dolorum dolore amet iusto? Dolores enim officia consequuntur cumque magnam quam, mollitia deserunt. Porro, quasi deserunt. Ut, fugit asperiores!</p>
+        <ol>
+            <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero odio enim cupiditate sapiente. Quaerat,
+                mollitia. Ullam officiis nulla praesentium quae.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia illum impedit vel officiis eos nobis
+                dignissimos recusandae molestias ipsam dolores?</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, perferendis qui enim praesentium
+                voluptatem dolore accusantium neque dignissimos nisi perspiciatis.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil eligendi doloribus exercitationem illum
+                ab, soluta suscipit et sapiente accusamus dolore!</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore labore ad autem velit sed quibusdam
+                maxime placeat ullam facere porro.</li>
+            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores voluptatem magni ex minus illo minima
+                cupiditate laborum error natus dolores?</li>
+            <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad praesentium officiis exercitationem
+                voluptate temporibus cum eos dolore aperiam odio possimus.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga libero nulla quaerat recusandae dolorem
+                corporis, perspiciatis rem explicabo! Numquam, itaque.</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi voluptates quod quae dicta alias
+                perspiciatis dolores odit. Nisi, facere ducimus!</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio magnam voluptate recusandae error ullam,
+                unde earum perferendis? Voluptatibus, incidunt assumenda.</li>
+            </ul>
 
     </section>
 
-    <section class="booking-formular">
+    <section class="booking-container">
 
-        <label for="name">Fulde navn: </label>
-        <input type="text" name="name" placeholder="Marie Hansen">
+        <div class="booking-form">
 
-        <label for="number">Hvor mange vil i blive? </label>
-        <input type="number" name="number">
+            <label for="name">Fulde navn: </label>
+            <input type="text" name="name" placeholder="Marie Hansen">
 
-        <label for="hours">Hvornår vil du gerne booke til og hvor mange timer? </label>
-        <input type="time" name="hours" id="">
-        <input type="number" name="hours" id="">
+            <label for="number">Hvor mange vil i blive? </label>
+            <input type="number" name="number">
 
-        <label for="">Din E-Mail: </label>
-        <input type="email" name="email" placeholder="exempel@hotmail.dk">
+            <label for="hours"> Fra hvornår og hvor mange timer, vil du gerne booke? </label>
+            <input type="time" name="hours" class="hours">
+            <input type="time" name="hours" class="hours">
 
-        <label for="phone">Dit Telefon nummer: </label>
-        <input type="tel" name="phone">
+            <label for="">Din E-Mail: </label>
+            <input type="email" name="email" placeholder="exempel@hotmail.dk">
 
-        <button class="book-btn">Book Tid</button>
+            <label for="phone">Dit Telefon nummer: </label>
+            <input type="tel" name="phone">
 
-        <h3>Priser</h3>
+            <button class="book-btn">Book Tid</button>
 
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam labore modi blanditiis dolor repellat molestias, non facilis doloremque molestiae magnam repellendus neque architecto atque, illo saepe. Autem reprehenderit nihil odio aliquam ducimus modi iusto? Eaque, magni quidem nihil saepe suscipit accusamus odit. Quaerat quam libero enim quod, non optio blanditiis voluptate dignissimos cum, expedita numquam culpa facilis inventore fugiat nostrum?</p>
+        </div>
 
+        <div class="price">
+
+            <h3>Priser</h3>
+
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam labore modi blanditiis dolor repellat
+                molestias, non facilis doloremque molestiae magnam repellendus neque architecto atque, illo saepe. Autem
+                reprehenderit nihil odio aliquam ducimus modi iusto? Eaque, magni quidem nihil saepe suscipit accusamus
+                odit. Quaerat quam libero enim quod, non optio blanditiis voluptate dignissimos cum, expedita numquam
+                culpa
+                facilis inventore fugiat nostrum?</p>
+        </div>
     </section>
 
 
@@ -86,7 +120,7 @@
         <section class="contact">
 
             <h3>Café Kit</h3>
-            
+
             <img src="/assets/img/location.png" alt="">
             <p>Fantasivej 45, 1060 København, Danmark</p>
 
@@ -114,6 +148,7 @@
         </section>
 
     </footer>
-    
+
 </body>
+
 </html>
