--- a/contact.html
+++ b/contact.html
@@ -70,10 +70,11 @@
 
     </article>
 
-    <h2 class="goodbye-text">Vi glæder os til at se jer</h2>
+    
     
     <figure class="contact-hero">
 
+        <h2 class="goodbye-text">Vi glæder os til at se jer !</h2>
 
     </figure>
 
