--- a/contact.html
+++ b/contact.html
@@ -43,12 +43,12 @@
         <section class="contact-form">
 
             <label for="name">Fulde navn: </label>
-            <input type="text" name="name" id="">
+            <input type="text" name="name" placeholder="Karoline Jensen">
 
             <label for="email">Din Email</label>
-            <input type="email" name="email" id="">
+            <input type="email" name="email" placeholder="exempel@hotmail.dk">
 
-            <textarea name="" cols="30" rows="10"></textarea>
+            <textarea name="" cols="30" rows="10" placeholder="Din besked"></textarea>
 
             <button type="submit">Send</button>
 
