--- a/meet-the-cats.html
+++ b/meet-the-cats.html
@@ -38,7 +38,9 @@
 
     </nav>
 
-    <div class="cat-wrapper">
+    <article class="cat-wrapper">
+
+        <h1>Vores katte</h1>
 
         <section class="image-left">
 
@@ -141,7 +143,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae sit delectus harum modi saepe facilis aut mollitia omnis necessitatibus eius voluptatibus reiciendis quaerat quo, ipsam rerum magnam libero enim tempora.</p>
 
         </section>
-    </div>
+    </article>
 
     <footer class="footer">
 
