--- a/book.html
+++ b/book.html
@@ -98,12 +98,30 @@
 
             <h3>Priser</h3>
 
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam labore modi blanditiis dolor repellat
-                molestias, non facilis doloremque molestiae magnam repellendus neque architecto atque, illo saepe. Autem
-                reprehenderit nihil odio aliquam ducimus modi iusto? Eaque, magni quidem nihil saepe suscipit accusamus
-                odit. Quaerat quam libero enim quod, non optio blanditiis voluptate dignissimos cum, expedita numquam
-                culpa
-                facilis inventore fugiat nostrum?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa explicabo fugiat alias dolor corporis vitae ullam harum vel veniam adipisci?</p>
+
+            <dl>
+
+                <dt>Lorem ipsum dolor sit amet.</dt>
+                <dd>200 kr</dd>
+
+                <dt>Lorem ipsum dolor sit amet consectetur.</dt>
+                <dd>350 kr</dd>
+
+                <dt>Lorem ipsum dolor sit.</dt>
+                <dd>350 kr</dd>
+
+                <dt>Lorem ipsum dolor sit amet consectetur adipisicing.</dt>
+                <dd>435 kr</dd>
+
+                <dt>Lorem ipsum dolor sit.</dt>
+                <dd>+150 kr</dd>
+                
+                <dt>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, a.</dt>
+                <dd>+50 kr</dd>
+
+            </dl>
+
         </div>
     </section>
 
