--- a/menu.html
+++ b/menu.html
@@ -50,11 +50,46 @@
         <button class="tab-button" style="border-top-right-radius: 10px;" data-id="contact">Drikkevarer</button>
       </div>
       <div class="contentWrapper">
-        <p class="content active" id="home">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam iste doloribus unde ullam doloremque eos autem ad nulla accusamus? Modi at minima numquam accusamus repudiandae perspiciatis nostrum architecto voluptatem quasi?
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ratione corporis earum laudantium sapiente autem praesentium error neque illum adipisci modi ea, consectetur rerum pariatur laborum aperiam at commodi! Impedit.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, quasi porro dolorum deleniti velit fuga perspiciatis veniam minus perferendis facere sit doloribus aliquid illum adipisci. Quam quasi maxime perferendis dolorem.
-        </p>
+        <section class="content active" id="home">
+            
+            <h2>Varme Retter</h2>
+
+            <dl>
+
+                <dt>Lorem, ipsum.</dt>
+                <dd>Lorem ipsum dolor sit amet consectetur adipisicing. 50kr</dd>
+
+                <dt>Lorem, ipsum.</dt>
+                <dd>Lorem ipsum dolor sit amet. 45kr</dd>
+
+                <dt>Lorem, ipsum.</dt>
+                <dd>Lorem ipsum dolor sit amet consectetur. 55kr</dd>
+
+                <dt>Lorem, ipsum.</dt>
+                <dd>Lorem, ipsum dolor sit amet consectetur adipisicing. 55kr</dd>
+
+                <dt>Lorem, ipsum.</dt>
+                <dd>Lorem ipsum dolor sit amet consectetur. 55kr</dd>
+
+            </dl>
+
+            <h2>Det søde</h2>
+
+            <dl>
+
+                <dt>Lorem.</dt>
+                <dd>Lorem, ipsum. 30kr</dd>
+
+                <dt>Lorem, ipsum.</dt>
+                <dd>25kr</dd>
+                
+                <dt>Lorem, ipsum.</dt>
+                <dd>Lorem ipsum dolor sit amet. 25kr</dd>
+
+            </dl>
+
+
+        </section>
         <p class="content" id="about">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis maxime itaque veritatis iste soluta placeat obcaecati laudantium repellat corrupti! Eius sunt rerum inventore magnam? Perspiciatis facere error suscipit quisquam quibusdam.
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam, corporis voluptatem quo dignissimos eius quis perferendis vero culpa reiciendis nulla quisquam fugit minima sed molestiae excepturi beatae repudiandae ea? Aliquid!
