Menu slider changes

--- a/menu.html
+++ b/menu.html
@@ -88,19 +88,82 @@
 
             </dl>
 
+        </section>
+
+        <section class="content" id="about">
+
+            <dl>
+
+                <dt>Lorem, ipsum.</dt>
+                <dd>Lorem ipsum dolor sit amet consectetur adipisicing. 20kr</dd>
+
+                <dt>Lorem, ipsum.</dt>
+                <dd>Lorem ipsum dolor sit amet. 25kr</dd>
+
+                <dt>Lorem, ipsum.</dt>
+                <dd>Lorem ipsum dolor sit amet consectetur. 30kr</dd>
+
+                <dt>Lorem, ipsum.</dt>
+                <dd>Lorem, ipsum dolor sit amet consectetur adipisicing. 15kr</dd>
+
+                <dt>Lorem, ipsum.</dt>
+                <dd>Lorem ipsum dolor sit amet consectetur. 35kr</dd>
+
+            </dl>
 
         </section>
-        <p class="content" id="about">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis maxime itaque veritatis iste soluta placeat obcaecati laudantium repellat corrupti! Eius sunt rerum inventore magnam? Perspiciatis facere error suscipit quisquam quibusdam.
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam, corporis voluptatem quo dignissimos eius quis perferendis vero culpa reiciendis nulla quisquam fugit minima sed molestiae excepturi beatae repudiandae ea? Aliquid!
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim sapiente officia vel consequuntur, hic at quis? Illo repellendus dolores totam facilis sunt sequi qui hic, nulla ratione harum porro perspiciatis.
-        </p>
-        <p class="content" id="contact">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos sit incidunt nostrum? Magni, quam vero, magnam odio similique ipsam minima et repellat rerum cupiditate totam in repudiandae. Sed, dicta corrupti?
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, dolore quas quis earum incidunt voluptas! Ducimus quod libero aliquid consequatur et modi porro officia, quibusdam quas commodi placeat maxime qui?
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab ea debitis eligendi accusamus deleniti maxime pariatur. Assumenda, facere placeat eius quam magni accusantium aut quae minima iure atque incidunt illum.
-        </p>
+
+        <section class="content" id="contact">
+         
+            <h2>Varme Drikkevarer</h2>
+
+            <dl>
+
+                <dt>Lorem, ipsum.</dt>
+                <dd>Lorem ipsum dolor sit amet consectetur adipisicing. 50kr</dd>
+
+                <dt>Lorem, ipsum.</dt>
+                <dd>Lorem ipsum dolor sit amet. 45kr</dd>
+
+                <dt>Lorem, ipsum.</dt>
+                <dd>Lorem ipsum dolor sit amet consectetur. 35kr</dd>
+
+                <dt>Lorem, ipsum.</dt>
+                <dd>Lorem, ipsum dolor sit amet consectetur adipisicing. 59kr</dd>
+
+                <dt>Lorem, ipsum.</dt>
+                <dd>Lorem ipsum dolor sit amet consectetur. 30kr</dd>
+
+            </dl>
+
+            <h2>Kolde Drikkevarer</h2>
+
+            <dl>
+
+                <dt>Lorem.</dt>
+                <dd>Lorem, ipsum. 30kr</dd>
+
+                <dt>Lorem, ipsum.</dt>
+                <dd>Lorem, ipsum dolor. 50kr</dd>
+                
+                <dt>Lorem, ipsum.</dt>
+                <dd>Lorem ipsum dolor sit amet. 38kr</dd>
+
+                <dt>Lorem, ipsum.</dt>
+                <dd>Lorem ipsum dolor sit amet. 25kr</dd>
+
+                <dt>Lorem, ipsum.</dt>
+                <dd>Lorem, ipsum, dolor, sit, amet, consectetur, adipisicing. 30kr</dd>
+
+                <dt>Lorem, ipsum.</dt>
+                <dd>Lorem, ipsum dolor sit amet. 55kr</dd>
+
+            </dl>
+
+        </section>
+
       </div>
+
     </div>
 
     <footer class="footer">
